# tango-slsDetectorControl

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml  check-build-docker.yml
cmake/: FindTango.cmake
docker/: Dockerfile
src/: CMakeLists.txt  ClassFactory.cpp  SlsDetectorControl.cpp  SlsDetectorControl.h  SlsDetectorControl.xmi  SlsDetectorControlClass.cpp  SlsDetectorControlClass.h  SlsDetectorControlDynAttrUtils.cpp  SlsDetectorControlStateMachine.cpp  main.cpp
